[upd] add api attributes
