# docs/api.yaml
@@ -1145,6 +1145,28 @@ paths:
       security:
         - bearerAuth: []
 
+  /categories/{id}/attributes:
+    get:
+      summary: Get all attributes of the category
+      tags:
+        - Categories
+      parameters:
+        - name: id
+          in: path
+          description: ID of the category to get attributes
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: A list of attributes of the categories
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+        - bearerAuth: []
+
   /brands:
     get:
       summary: Get all brands
